// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader Component Snapshot Tests matches snapshot for authenticated state 1`] = `
<div>
  <header
    class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-8 gap-4 "
  >
    <div
      class="flex-shrink-0"
    >
      <h1
        class="text-3xl sm:text-4xl font-bold bg-gradient-to-r from-cyan-400 to-cyan-600 bg-clip-text text-transparent"
      >
        LinkGuard
      </h1>
      <p
        class="text-gray-400 text-sm sm:text-base mt-1"
      >
        Analyze links, domains, and IPs for security risks
      </p>
    </div>
    <div
      class="flex items-center gap-3 flex-wrap"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="hidden sm:flex items-center gap-2 px-4 py-2 bg-gray-800/50 rounded-lg border border-gray-700"
        >
          <span
            class="text-gray-400 text-sm"
          >
            👤
          </span>
          <span
            class="text-gray-300 text-sm font-medium"
          >
            John Doe
          </span>
        </div>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-destructive text-destructive-foreground hover:bg-destructive/90 h-10 px-4 py-2 shadow-lg hover:shadow-red-500/20"
        >
          <span
            class="inline-flex"
          >
            <span>
              🚪
            </span>
          </span>
          Logout
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`PageHeader Component Snapshot Tests matches snapshot for unauthenticated state 1`] = `
<div>
  <header
    class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-8 gap-4 "
  >
    <div
      class="flex-shrink-0"
    >
      <h1
        class="text-3xl sm:text-4xl font-bold bg-gradient-to-r from-cyan-400 to-cyan-600 bg-clip-text text-transparent"
      >
        LinkGuard
      </h1>
      <p
        class="text-gray-400 text-sm sm:text-base mt-1"
      >
        Analyze links, domains, and IPs for security risks
      </p>
    </div>
    <div
      class="flex items-center gap-3 flex-wrap"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 px-4 py-2 shadow-lg hover:shadow-cyan-500/20"
      >
        Log In
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 shadow-lg hover:shadow-cyan-500/20"
      >
        Sign Up
      </button>
    </div>
  </header>
</div>
`;

exports[`PageHeader Component Snapshot Tests matches snapshot with custom actions 1`] = `
<div>
  <header
    class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-8 gap-4 "
  >
    <div
      class="flex-shrink-0"
    >
      <h1
        class="text-3xl sm:text-4xl font-bold bg-gradient-to-r from-cyan-400 to-cyan-600 bg-clip-text text-transparent"
      >
        LinkGuard
      </h1>
      <p
        class="text-gray-400 text-sm sm:text-base mt-1"
      >
        Analyze links, domains, and IPs for security risks
      </p>
    </div>
    <div
      class="flex items-center gap-3 flex-wrap"
    >
      <div
        class="flex items-center gap-3"
      >
        <button>
          Custom
        </button>
      </div>
    </div>
  </header>
</div>
`;
